--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.2.0",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -26,7 +29,10 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.70.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
