--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@testing-library/react-native": "^11.1.0",
+    "@testing-library/react-native": "^11.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.1.0",
     "@types/react-native": "^0.70.0",
     "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
@@ -51,6 +51,12 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": [
+      "./src/config/baseMocks.ts"
+    ],
+    "modulePathIgnorePatterns": [
+      ".mock.ts"
     ]
   }
 }
