--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
     "react": "18.1.0",
     "react-native": "0.70.0",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-svg": "^13.2.0",
+    "react-native-vector-icons": "^9.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@testing-library/react-native": "^11.1.0",
+    "@testing-library/react-native": "^11.2.0",
     "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^29.1.0",
     "@types/react-native": "^0.70.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
@@ -45,6 +51,12 @@
       "jsx",
       "json",
       "node"
+    ],
+    "setupFiles": [
+      "./src/config/baseMocks.ts"
+    ],
+    "modulePathIgnorePatterns": [
+      ".mock.ts"
     ]
   }
 }
